Finishing touch - Remove placeholder text

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -13,8 +13,8 @@
   </form>
 <section class="result" id="result">
     <div class="result__overview">
-      <h1>result title</h1>
-      <p class="result__description">Battles is an American experimental rock group, founded in 2002 in New York City by Ian Williams. The current line-up is guitarist/ keyboardist Ian Williams, guitarist/ bassist Dave Konopka, and drummer John Stanier. Former members include composer/vocalist Tyondai Braxton.</p>
+      <h1>'result title'</h1>
+      <p class="result__description">Answer will be provided here.</p>
     </div>
     <a class="result__source" href="#" target="_blank">Read more on Wikipedia</a></div>
   </section>
